# aula_20_bootcamp_python

./: README.md  docker-compose.yml  pyproject.toml
backend/: crud.py  database.py  models.py  router.py  schema.py
